<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:navigationIcon="@drawable/ic_navigation"
                app:menu="@menu/menu_toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="left"/>

            </com.google.android.material.appbar.MaterialToolbar>

            <LinearLayout
                android:id="@+id/filter_chip_group_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filter_chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    app:selectionRequired="true"
                    app:chipSpacingHorizontal="20dp"
                    app:layout_scrollFlags="scroll|enterAlways">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Calls"
                        app:textStartPadding="4dp"
                        app:textEndPadding="4dp"
                        android:textColor="@color/colorPrimary"
                        app:chipBackgroundColor="@color/white"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Messages"
                        app:textStartPadding="4dp"
                        app:textEndPadding="4dp"
                        android:textColor="@color/colorPrimary"
                        app:chipBackgroundColor="@color/white"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Notes"
                        app:textStartPadding="4dp"
                        app:textEndPadding="4dp"
                        android:textColor="@color/colorPrimary"
                        app:chipBackgroundColor="@color/white"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabMode="fixed"
                style="@style/Widget.MaterialComponents.TabLayout.Colored">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/calls_tab_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_calls"
                    android:text="@string/calls"/>

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/messages_tab_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_messages"
                    android:text="@string/messages"/>

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/notes_tab_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_notes"
                    android:text="@string/notes"/>

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_note_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="bottom|end"
            android:visibility="gone"
            app:icon="@drawable/ic_new_note_black"
            android:text="@string/new_note"
            android:textAllCaps="false"
            tools:ignore="MissingConstraints" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_navigation"/>

</androidx.drawerlayout.widget.DrawerLayout>
